[tool.poetry]
name = "modelslab_py"
version = "0.2.3"
description = "ModelsLab's Official Python SDK"
authors = [
    "Anurag Kanade <anuragkanade54@gmail.com>",
    "Tanmay Patil <tanmaypatil3151@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.11.3"
aiohttp = {version = "^3.9.0", optional = true}

[tool.poetry.extras]
async = ["aiohttp"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
